--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="white">#ffffff</color>
+    <color name="soft_blue">#4f80ff</color>
+    <color name="black">#000000</color>
+    <color name="very_light_pink">#f2f2f2</color>
+    <color name="very_light_pink_two">#cdcdcd</color>
+    <color name="brown_grey">#9d9d9d</color>
+    <color name="brownish_grey">#707070</color>
+    <color name="white_two">#f9f9f9</color>
 </resources>
