--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,6 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".ui.home.HomeActivity">
     <ImageView
             android:src="@drawable/artic_logo"
@@ -12,7 +13,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/img_home_artic_logo"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp"/>
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="15dp"/>
     <TextView
             android:text="@string/home_welcome"
             android:layout_width="wrap_content"
@@ -48,6 +49,6 @@
             android:layout_width="0dp"
             android:layout_height="360dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="45dp"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" android:id="@+id/rv_home_card"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
