--- a/app/src/main/res/layout/rv_item_link_home_card.xml
+++ b/app/src/main/res/layout/rv_item_link_home_card.xml
@@ -1,7 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:orientation="vertical"
+                                                   android:layout_width="260dp"
+                                                   android:layout_height="360dp"
+                                                   android:id="@+id/container_rv_item_l_home_card">
 
-</LinearLayout>
+
+    <ImageView
+            android:background="@drawable/link_home_card_round"
+            android:layout_width="260dp"
+            android:layout_height="260dp" tools:srcCompat="@tools:sample/avatars"
+            android:id="@+id/img_rv_item_l_home_card"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+    />
+    <TextView
+            tools:text="지금 바로 시작할 수 있는\n린 브랜드 방법론"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_rv_item_l_home_card_title" android:layout_marginTop="17dp"
+            app:layout_constraintTop_toBottomOf="@+id/img_rv_item_l_home_card"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="22dp" android:textColor="@color/black"/>
+    <TextView
+            tools:text="김가형 큐레이터"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_rv_item_l_home_card_curator"
+            app:layout_constraintStart_toStartOf="@+id/txt_rv_item_l_home_card_title"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_rv_item_l_home_card_title"
+            android:textColor="@color/black" android:textSize="12sp"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
