--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,13 +14,19 @@
             android:id="@+id/img_home_artic_logo"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="15dp"/>
+
     <TextView
-            android:text="@string/home_welcome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txt_home_welcome" android:layout_marginTop="67dp"
-            app:layout_constraintTop_toBottomOf="@+id/img_home_artic_logo" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="30dp" android:textSize="22sp" android:textColor="@color/black"/>
+        android:id="@+id/txt_home_welcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="67dp"
+        android:fontFamily="@font/nanum_barungothic_light"
+        android:text="@string/home_welcome"
+        android:textColor="@color/black"
+        android:textSize="22sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_home_artic_logo" />
     <androidx.constraintlayout.widget.ConstraintLayout
             android:background="@drawable/very_light_pink_round"
             android:layout_width="0dp"
@@ -30,12 +36,22 @@
             android:layout_marginStart="19dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="19dp"
             android:id="@+id/constraintLayout">
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-                  app:layout_constraintHorizontal_bias="0.0"
-                  app:layout_constraintVertical_bias="1.0" android:text="@string/home_search_hint"
-                  android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:layout_marginStart="46dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="46dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:fontFamily="@font/nanum_barungothic_bold"
+            android:text="@string/home_search_hint"
+            android:textColor="@color/brown_grey"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
         <ImageView
                 android:src="@drawable/ic_search"
                 android:layout_width="wrap_content"
