--- a/app/src/main/res/layout/rv_item_archive_home_card.xml
+++ b/app/src/main/res/layout/rv_item_archive_home_card.xml
@@ -14,22 +14,31 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
     <TextView
-            tools:text="린 브랜딩을 어떻게\n시작해야 할까?"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/txt_rv_item_a_home_card_title"
-            app:layout_constraintStart_toStartOf="@+id/img_rv_item_a_home_card"
-            app:layout_constraintEnd_toEndOf="@+id/img_rv_item_a_home_card" android:layout_marginEnd="21dp"
-            android:layout_marginStart="21dp"
-            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="55dp"
-            app:layout_constraintTop_toTopOf="@+id/img_rv_item_a_home_card" android:textSize="20sp"
-            android:textColor="@color/white"/>
+        android:id="@+id/txt_rv_item_a_home_card_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="21dp"
+        android:fontFamily="@font/nanum_barungothic_bold"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/img_rv_item_a_home_card"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/img_rv_item_a_home_card"
+        app:layout_constraintTop_toTopOf="@+id/img_rv_item_a_home_card"
+        tools:text="린 브랜딩을 어떻게\n시작해야 할까?" />
+
     <TextView
-            tools:text="초보자를 위한 린 브랜딩 모음"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txt_rv_item_a_home_card_desc" android:layout_marginTop="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/txt_rv_item_a_home_card_title"
-            app:layout_constraintStart_toStartOf="@+id/txt_rv_item_a_home_card_title" android:textColor="@color/white"/>
+        android:id="@+id/txt_rv_item_a_home_card_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        android:fontFamily="@font/nanum_barungothic_light"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="@+id/txt_rv_item_a_home_card_title"
+        app:layout_constraintTop_toBottomOf="@+id/txt_rv_item_a_home_card_title"
+        tools:text="초보자를 위한 린 브랜딩 모음" />
 </androidx.constraintlayout.widget.ConstraintLayout>
