--- a/app/src/main/res/layout/rv_item_link_home_card.xml
+++ b/app/src/main/res/layout/rv_item_link_home_card.xml
@@ -15,20 +15,28 @@
             android:id="@+id/img_rv_item_l_home_card"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
     />
+
     <TextView
-            tools:text="지금 바로 시작할 수 있는\n린 브랜드 방법론"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txt_rv_item_l_home_card_title" android:layout_marginTop="17dp"
-            app:layout_constraintTop_toBottomOf="@+id/img_rv_item_l_home_card"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="22dp" android:textColor="@color/black"/>
+        android:id="@+id/txt_rv_item_l_home_card_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="17dp"
+        android:fontFamily="@font/nanum_barungothic_bold"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_rv_item_l_home_card"
+        tools:text="지금 바로 시작할 수 있는\n린 브랜드 방법론" />
+
     <TextView
-            tools:text="김가형 큐레이터"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txt_rv_item_l_home_card_curator"
-            app:layout_constraintStart_toStartOf="@+id/txt_rv_item_l_home_card_title"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_rv_item_l_home_card_title"
-            android:textColor="@color/black" android:textSize="12sp"/>
+        android:id="@+id/txt_rv_item_l_home_card_curator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/nanum_barungothic_regular"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@+id/txt_rv_item_l_home_card_title"
+        app:layout_constraintTop_toBottomOf="@+id/txt_rv_item_l_home_card_title"
+        tools:text="김가형 큐레이터" />
 </androidx.constraintlayout.widget.ConstraintLayout>
