--- a/app/src/main/res/layout/child_category.xml
+++ b/app/src/main/res/layout/child_category.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="50dp"
+    android:background="@color/white_two"
     android:orientation="vertical">
 
     <TextView
