--- a/app/src/main/res/layout/parent_category.xml
+++ b/app/src/main/res/layout/parent_category.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
+    android:id="@+id/container_parent_category"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/parent_category_rectangle"
     android:orientation="vertical">
 
     <TextView
