--- a/app/src/main/res/drawable/home_search_round.xml
+++ b/app/src/main/res/drawable/home_search_round.xml
@@ -3,5 +3,6 @@
         android:shape="rectangle"
         xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="50dp"/>
-    <solid android:color="@color/very_light_pink"/>
+    <solid android:color="@color/white"/>
+    <stroke android:width="0.1dp" android:color="@color/black"/>
 </shape>
