--- a/app/src/main/res/layout/rv_item_archive_card.xml
+++ b/app/src/main/res/layout/rv_item_archive_card.xml
@@ -2,9 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
+        android:layout_margin="5dp"
         android:layout_width="177dp"
         android:layout_height="239dp">
 
