--- a/app/src/main/res/layout/rv_item_home_new_article.xml
+++ b/app/src/main/res/layout/rv_item_home_new_article.xml
@@ -3,7 +3,42 @@
     android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/back_transparent_round_card_grey">
 
     <ImageView
-        android:layout_width=""
-        android:layout_height="" />
+        android:id="@+id/img_rv_item_home_new_article_background"
+        android:layout_width="296dp"
+        android:layout_height="173dp"
+        android:background="@drawable/archive_card_round"
+        android:src="#000000"/>
+
+    <RelativeLayout
+        android:layout_width="296dp"
+        android:layout_height="100dp"
+        android:background="@drawable/back_transparent_round_card_grey">
+
+        <TextView
+            android:id="@+id/tv_rv_item_home_new_article_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="18dp"
+            android:text="브랜딩은 린(lean)하게, 합리적인 선에서 어떻게 해야 할까?"
+            android:textSize="14sp"
+            android:textColor="#000000"
+            android:fontFamily="@font/nanum_barungothic_light"/>
+
+        <TextView
+            android:id="@+id/tv_rv_item_home_new_article_url"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="15dp"
+            android:text="brunch.co.kr"
+            android:textColor="#aaaaaa"
+            android:textSize="14sp"
+            android:fontFamily="@font/nanum_barungothic_regular"
+            android:layout_alignStart="@id/tv_rv_item_home_new_article_title"/>
+
+
+    </RelativeLayout>
 
 </LinearLayout>
