--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -63,7 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/nanumbarungothiclight"
+            android:fontFamily="@font/nanum_barungothic_light"
             android:text="@string/home_title"
             android:textColor="@color/black"
             android:textSize="13sp"
@@ -79,7 +79,9 @@
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+            android:showDividers="middle"
+            android:divider="@drawable/empty_tall_divider">
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
