--- a/app/src/main/res/layout/rv_item_reading_history.xml
+++ b/app/src/main/res/layout/rv_item_reading_history.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:id="@+id/rv_reading_history_container"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         android:background="@color/white_two"
         android:paddingLeft="22dp">
 
@@ -19,18 +19,25 @@
             android:layout_height="wrap_content"
             android:text="brunch.co.kr"
             android:textSize="14sp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:textColor="#aaaaaa"
-
+            android:fontFamily="@font/nanum_barungothic_regular"
             />
+
         <TextView
             android:id="@+id/rv_reading_history_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/rv_reading_history_url"
+            android:layout_toStartOf="@id/rv_reading_history_img"
+            android:layout_alignStart="@id/rv_reading_history_url"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="45dp"
             android:textSize="14sp"
-            android:text="제품 디자이너는 코딩에 대해 잊어야\n합니다."/>
+            android:text="제품 디자이너는 코딩에 대해 잊어야합니다."
+            android:layout_marginBottom="15dp"
+            android:textColor="#000000"
+            android:fontFamily="@font/nanum_barungothic_light"/>
 
 
         <ImageView
@@ -38,8 +45,9 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="33dp"
-            android:background="@drawable/img_history"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/img_history"
+            android:background="@drawable/archive_card_round"
             android:layout_alignParentRight="true"/>
 
 
