--- a/app/src/main/res/layout/fragment_reading_history.xml
+++ b/app/src/main/res/layout/fragment_reading_history.xml
@@ -8,13 +8,13 @@
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:orientation="vertical">
+       android:orientation="vertical"
+       android:background="@color/white_two">
 
        <RelativeLayout
            android:layout_width="match_parent"
-           android:layout_height="70dp"
-           android:paddingTop="20dp"
-           android:background="@color/white_two"
+           android:layout_height="wrap_content"
+           android:paddingTop="30dp"
            >
        <TextView
             android:id="@+id/txt_reading_history"
@@ -38,7 +38,8 @@
            android:id="@+id/rv_reading_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
-
+           android:layout_marginTop="10dp"
+           android:layout_marginBottom="15dp"
        />
    </LinearLayout>
 </FrameLayout>
