--- a/app/src/main/res/layout/rv_item_archive_card.xml
+++ b/app/src/main/res/layout/rv_item_archive_card.xml
@@ -27,7 +27,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@tools:sample/avatars"
+                android:scaleType="centerCrop"/>
 
             <TextView
                 android:id="@+id/txt_rv_item_archive_card_category"
@@ -46,8 +47,8 @@
                 android:id="@+id/txt_rv_item_archive_card_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="19dp"
-                android:layout_marginEnd="19dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginEnd="38dp"
                 android:layout_marginBottom="17dp"
                 android:fontFamily="@font/nanumbarungothiclight"
                 android:lineSpacingExtra="6sp"
