--- a/app/src/main/res/layout/rv_item_category_archive_card.xml
+++ b/app/src/main/res/layout/rv_item_category_archive_card.xml
@@ -24,7 +24,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@tools:sample/avatars"
+                android:scaleType="centerCrop"/>
 
             <TextView
                 android:id="@+id/txt_rv_item_category_archive_card_title"
