--- a/app/src/main/res/layout/activity_new_article_link.xml
+++ b/app/src/main/res/layout/activity_new_article_link.xml
@@ -28,6 +28,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textSize="17sp"
+            android:textColor="@color/black"
+            android:includeFontPadding="false"
             android:fontFamily="@font/nanum_barungothic_bold"
             android:text="@string/new_article_link_title"/>
     </RelativeLayout>
