--- a/app/src/main/res/layout/rv_item_artic_pick.xml
+++ b/app/src/main/res/layout/rv_item_artic_pick.xml
@@ -22,7 +22,7 @@
                 android:scaleType="fitXY"
                 android:layout_marginHorizontal="20dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/thumbnail"
+                android:background="@drawable/thumbnail"
                 />
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -32,11 +32,15 @@
                     android:id="@+id/rv_artic_pick_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
-                    android:textSize="16sp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginRight="22dp"
+                    android:textSize="15sp"
+                    android:includeFontPadding="false"
                     android:fontFamily="@font/nanum_barungothic_light"
                     android:textColor="@color/black"
-                    android:text="디자이너가 알아두면 좋은 인하우스와 에이전시는\n에이전시의 차이점"/>
+                    android:text="디자이너가 알아두면 좋은 인하우스와 에이전시는 에이전시의 차이점"/>
 
                 <TextView
                     android:id="@+id/rv_artic_pick_url"
@@ -44,8 +48,9 @@
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
                     android:layout_below="@id/rv_artic_pick_txt"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="22dp"
                     android:layout_marginBottom="15dp"
+                    android:includeFontPadding="false"
                     android:text="brunch.co.kr"
                     android:fontFamily="@font/nanumbarungothic"
                     android:textColor="#aaaaaa"/>
