--- a/app/src/main/res/layout/rv_item_reading_history.xml
+++ b/app/src/main/res/layout/rv_item_reading_history.xml
@@ -11,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:background="@color/white_two"
-        android:paddingLeft="22dp">
+        android:paddingLeft="22dp"
+
+    >
 
         <TextView
             android:id="@+id/rv_reading_history_url"
@@ -19,7 +21,10 @@
             android:layout_height="wrap_content"
             android:text="brunch.co.kr"
             android:textSize="14sp"
-            android:layout_marginTop="20dp"
+            android:layout_alignParentLeft="true"
+            android:includeFontPadding="false"
+            android:fontFamily="@font/nanumbarungothic"
+            android:layout_marginTop="40dp"
             android:textColor="#aaaaaa"
 
             />
@@ -29,16 +34,22 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/rv_reading_history_url"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/nanum_barungothic_light"
+            android:layout_marginRight="45dp"
+            android:textColor="@color/black"
+            android:layout_alignParentLeft="true"
+            android:includeFontPadding="false"
+            android:layout_toStartOf="@id/rv_reading_history_img"
             android:textSize="14sp"
-            android:text="제품 디자이너는 코딩에 대해 잊어야\n합니다."/>
+            android:text="제품 디자이너는 코딩에 대해 잊어야 합니다."/>
 
 
         <ImageView
             android:id="@+id/rv_reading_history_img"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="33dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/img_history"
             android:layout_alignParentRight="true"/>
 
