--- a/app/src/main/res/layout/fragment_home_new_article.xml
+++ b/app/src/main/res/layout/fragment_home_new_article.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/linear_fragment_home_new_article"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
