--- a/app/src/main/res/layout/rv_item_artic_pick.xml
+++ b/app/src/main/res/layout/rv_item_artic_pick.xml
@@ -8,6 +8,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:id="@+id/rv_artic_pick_container"
             android:layout_width="match_parent"
@@ -19,15 +20,16 @@
                 android:id="@+id/rv_artic_pick_img"
                 android:layout_width="match_parent"
                 android:layout_height="169.8dp"
-                android:scaleType="fitXY"
+                android:scaleType="centerCrop"
                 android:layout_marginHorizontal="20dp"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/thumbnail"
-                />
+                android:background="@drawable/top_round" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="20dp">
+
                 <TextView
                     android:id="@+id/rv_artic_pick_txt"
                     android:layout_width="wrap_content"
