Login, Signup Activity Complete

--- a/app/src/main/res/layout/activity_signup_private.xml
+++ b/app/src/main/res/layout/activity_signup_private.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="20dp"
-    tools:context=".ui.signup.SignupLoginActivity">
+    tools:context=".ui.signup.signup.SignupPrivateActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:fontFamily="@font/nanumbarungothic"
-            android:textColor="@color/brownish_grey"
+            android:textColor="#cdcdcd"
             android:includeFontPadding="false"
             android:textSize="17sp"
             android:layout_marginTop="53dp"
@@ -93,10 +93,11 @@
         android:layout_height="wrap_content"
         android:text="이름 (닉네임)"
         android:includeFontPadding="false"
-        android:fontFamily="@font/nanumbarungothic"
+        android:fontFamily="@font/nanum_barungothic_regular"
         android:textColor="@color/black"
         android:textSize="16sp"/>
     <EditText
+        android:id="@+id/et_act_signup_private_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -109,10 +110,12 @@
         android:text="생년월일"
         android:includeFontPadding="false"
         android:layout_marginTop="54dp"
-        android:fontFamily="@font/nanumbarungothic"
+        android:fontFamily="@font/nanum_barungothic_regular"
         android:textColor="@color/black"
         android:textSize="16sp"/>
+
     <EditText
+        android:id="@+id/et_act_signup_private_birth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="36dp"
