--- a/app/src/main/res/layout/activity_signup_login.xml
+++ b/app/src/main/res/layout/activity_signup_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="20dp"
-    tools:context=".ui.signup.SignupLoginActivity">
+    tools:context=".ui.signup.signup.SignupLoginActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:fontFamily="@font/nanumbarungothic"
-            android:textColor="@color/brownish_grey"
+            android:textColor="#cdcdcd"
             android:includeFontPadding="false"
             android:textSize="17sp"
             android:layout_marginTop="53dp"
