--- a/app/src/main/res/layout/activity_signup_start.xml
+++ b/app/src/main/res/layout/activity_signup_start.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.login_start.LoginStartActivity"
+    tools:context=".ui.signup.signup_start.SignupStartActivity"
     android:background="@color/colorPrimary">
 
     <ImageView
-        android:id="@+id/img_act_login_start_logo"
+        android:id="@+id/img_act_signup_start_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="213dp"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
-        android:id="@+id/relative_act_login_start_email_login"
+        android:id="@+id/relative_act_signup_start_email_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="85dp"
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_act_login_start_logo">
+        app:layout_constraintTop_toBottomOf="@+id/img_act_signup_start_logo">
 
         <ImageView
             android:id="@+id/img_ic_mail"
@@ -48,14 +48,14 @@
             android:layout_toRightOf="@id/img_ic_mail"
             android:fontFamily="@font/nanum_barungothic_light"
             android:includeFontPadding="false"
-            android:text="이메일로 로그인"
+            android:text="이메일로 시작하기"
             android:textColor="#242424"
             android:textSize="14sp" />
 
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/relative_act_login_start_facebook_login"
+        android:id="@+id/relative_act_signup_start_facebook_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="85dp"
@@ -65,7 +65,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relative_act_login_start_email_login">
+        app:layout_constraintTop_toBottomOf="@+id/relative_act_signup_start_email_login">
 
         <ImageView
             android:id="@+id/img_ic_facebook"
@@ -86,7 +86,7 @@
             android:layout_toRightOf="@id/img_ic_facebook"
             android:fontFamily="@font/nanum_barungothic_light"
             android:includeFontPadding="false"
-            android:text="페북으로 로그인"
+            android:text="페북으로 시작하기"
             android:textColor="#ffffff"
             android:textSize="14sp" />
 
@@ -99,19 +99,19 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/relative_act_login_start_facebook_login">
+        app:layout_constraintTop_toBottomOf="@id/relative_act_signup_start_facebook_login">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="아직 회원이 아니신가요?"
+            android:text="이미 회원이시면,"
             android:textColor="#242424"
             android:textSize="12sp"
             android:fontFamily="@font/nanum_barungothic_light"
             android:includeFontPadding="false"/>
 
         <LinearLayout
-            android:id="@+id/linear_act_login_start_go_to_signup_button"
+            android:id="@+id/linear_act_signup_go_to_login_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -121,7 +121,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="회원가입 하기"
+                android:text="로그인 하기"
                 android:textSize="14sp"
                 android:textColor="#242424"
                 android:fontFamily="@font/nanum_barungothic_light"
