unite ArchiveListAdapter & DetailNewArchiveListAdapter & ArchiveListAdapter to ArchiveListFragment

--- a/app/src/main/res/layout/activity_detail_new_archive.xml
+++ b/app/src/main/res/layout/activity_detail_new_archive.xml
@@ -30,11 +30,11 @@
         android:layout_width="match_parent"
         android:layout_height="0.6dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_act_detail_new_archive"
+    <FrameLayout
+        android:id="@+id/container_detail_new_archive_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-    </androidx.recyclerview.widget.RecyclerView>
+    </FrameLayout>
 
 </LinearLayout>
