--- a/app/src/main/res/layout/activity_archive.xml
+++ b/app/src/main/res/layout/activity_archive.xml
@@ -24,11 +24,11 @@
         android:layout_width="match_parent"
         android:layout_height="0.6dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_archive_archive_list"
+    <FrameLayout
+        android:id="@+id/container_archive_archive_list_fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-    </androidx.recyclerview.widget.RecyclerView>
+    </FrameLayout>
 
 </LinearLayout>
