--- a/app/src/main/res/layout/rv_item_big_image_article.xml
+++ b/app/src/main/res/layout/rv_item_big_image_article.xml
@@ -10,14 +10,14 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:id="@+id/rv_artic_pick_container"
+            android:id="@+id/rv_big_image_article_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingTop="20dp">
 
             <ImageView
-                android:id="@+id/rv_artic_pick_img"
+                android:id="@+id/rv_big_image_article_img"
                 android:layout_width="match_parent"
                 android:layout_height="169.8dp"
                 android:scaleType="centerCrop"
@@ -31,7 +31,7 @@
                 android:layout_marginHorizontal="20dp">
 
                 <TextView
-                    android:id="@+id/rv_artic_pick_txt"
+                    android:id="@+id/rv_big_image_article_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -45,11 +45,11 @@
                     android:text="디자이너가 알아두면 좋은 인하우스와 에이전시는 에이전시의 차이점"/>
 
                 <TextView
-                    android:id="@+id/rv_artic_pick_url"
+                    android:id="@+id/rv_big_image_article_url"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
-                    android:layout_below="@id/rv_artic_pick_txt"
+                    android:layout_below="@id/rv_big_image_article_txt"
                     android:layout_marginLeft="22dp"
                     android:layout_marginBottom="15dp"
                     android:includeFontPadding="false"
